# rust-commands

./: .gitignore  README.md
.github/workflows/: ci.yml
chapter01-echo/: Cargo.toml
chapter01-echo/src/: main.rs
chapter02-cat/: Cargo.toml
chapter02-cat/src/: main.rs
chapter03-head-tail/: Cargo.toml  sample2.txt
chapter03-head-tail/src/: head.rs  tail.rs
chapter04-grep/: Cargo.toml  fruits.txt  mixed.txt
chapter04-grep/src/: main.rs
chapter04-grep/testdir/: extra.txt
chapter05-sort/: Cargo.toml  data.txt  fruits.txt  mixed.txt  numbers.txt
chapter05-sort/src/: main.rs
chapter06-cut-tr/: Cargo.toml  users.csv
chapter06-cut-tr/src/: cut.rs  tr.rs
chapter07-find/: Cargo.toml
chapter07-find/src/: main.rs
chapter07-find/testdir/sub/: example.rs
chapter08-ls/: Cargo.toml
chapter08-ls/src/: main.rs
chapter09-tree/: Cargo.toml
chapter09-tree/project/: Cargo.toml
chapter09-tree/src/: main.rs
chapter10-cp-mv/: Cargo.toml
chapter10-cp-mv/src/: cp.rs  mv.rs
chapter11-du/: Cargo.toml
chapter11-du/project/: Cargo.toml
chapter11-du/project/src/: lib.rs
chapter11-du/src/: main.rs
chapter12-xargs/: Cargo.toml
chapter12-xargs/src/: main.rs
chapter13-terminal-ui/: Cargo.toml
chapter13-terminal-ui/src/: main.rs
chapter13-terminal-ui/src/examples/: colored_main.rs  colored_main2.rs  comfy_table_main.rs  (+4 more)
chapter15-rustbox/crates/cli/: Cargo.toml
chapter15-rustbox/crates/cli/src/: main.rs
chapter15-rustbox/crates/cli/tests/: cli_binary.rs
echo-test/: Cargo.toml
echo-test/tests/: integration_test.rs
rustbox/: Cargo.toml
(+8 files in other folders)
