[package]
name = "rustbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustbox"
path = "src/main.rs"

[dependencies]
rustbox-lib = { path = "../lib" }
clap = { version = "4", features = ["derive"] }
regex = "1"
colored = "2"
walkdir = "2"
comfy-table = "7"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
